src/test/deca/syntax/valid/SansObjet/Main2-Inst-UnaryMinus.deca
// Description:
//    Declaration of a unary minus instruction.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        -3;
}
